plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'jacoco'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

javafx {
    version = "17.0.6"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    mainClass = 'org.example.Main'
    applicationDefaultJvmArgs = [
            '--add-modules', 'javafx.controls,javafx.fxml',
            '--add-opens', 'javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED',
            '--add-opens', 'javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
            '--add-opens', 'javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
            '--add-opens', 'javafx.base/com.sun.javafx.logging=ALL-UNNAMED',
            '--add-opens', 'javafx.graphics/com.sun.glass.utils=ALL-UNNAMED',
            '--add-opens', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED'
    ]
}

sourceCompatibility = '17'
targetCompatibility = '17'

processResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
    classDirectories.setFrom(
        sourceSets.main.output.classesDirs.getAsFileTree().matching {
            exclude 'org/example/Main.class'
        }
    )
}